loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:2: error: not found: value printIn
printIn(crossing()) 
^